fix: box-shadow in the dark mode of vanilla JS clock

--- a/VanillaJS_Clock/style.css
+++ b/VanillaJS_Clock/style.css
@@ -28,8 +28,8 @@ body.light {
     background-size: cover;
     border: 4px solid #091921;
     border-radius: 50%;
-    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.05), 20px 20px 20px rgba(0, 0, 0, 0.3),
-        inset -8px -8px 15px rgba(255, 255, 255, 0.05), inset 20px 20px 20px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 -15px 15px rgba(255, 255, 255, 0.05), inset 0 -15px 15px rgba(255, 255, 255, 0.05),
+        0 15px 15px rgba(0, 0, 0, 0.3), inset 0 15px 15px rgba(0, 0, 0, 0.3);
 }
 
 body.light .clock {
